# VR_ARM

./: .gitignore  README.md  conanfile.txt  setup.bashrc
devel/: .catkin  setup.sh
devel/lib/dynamixel_sdk/: group_bulk_read.py  group_bulk_write.py  group_sync_write.py  packet_handler.py  protocol1_packet_handler.py
devel/lib/pkgconfig/: dynamixel_interface.pc  dynamixel_sdk.pc
devel/lib/python3/dist-packages/dynamixel_sdk/: __init__.py
devel/share/dynamixel_interface/cmake/: dynamixel_interface-msg-paths.cmake  dynamixel_interfaceConfig.cmake
devel/share/dynamixel_sdk/cmake/: dynamixel_sdkConfig.cmake
devel/share/gennodejs/ros/dynamixel_interface/msg/: _index.js
devel/share/roseus/ros/dynamixel_interface/: manifest.l
src/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.txt
src/config/: left_arm_config.yaml
src/dependencies/RMD_Driver/: CMakeLists.txt  README.md
src/dependencies/RMD_Driver/include/can/: can_exception.hpp  frame.hpp  node.hpp
src/dependencies/RMD_Driver/include/meta/: version.hpp
src/dependencies/RMD_Driver/include/protocol/: address_offset.hpp  node.hpp  request.hpp  response.hpp
src/dependencies/RMD_Driver/src/can/: node.cpp  utilities.cpp
src/dependencies/RMD_Driver/src/protocol/: request.cpp  response.cpp
src/dependencies/dynamixel_interface/: CMakeLists.txt
src/dependencies/dynamixel_interface/config/: controller_config.yaml
src/dependencies/dynamixel_sdk/: CMakeLists.txt  package.xml
src/dependencies/integrated_motor/: CMakeLists.txt
src/dependencies/integrated_motor/include/: integrated_driver.hpp
src/dependencies/integrated_motor/src/: integratedDriver.cpp
src/dependencies/rmd_driver/: CMakeLists.txt  package.xml
src/dependencies/rmd_driver/include/: driver.hpp  exceptions.hpp  feedback.hpp  motor_status.hpp  rmd_driver.hpp
src/dependencies/rmd_driver/include/can/: can_exception.hpp  frame.hpp  node.hpp  utilities.hpp
src/dependencies/rmd_driver/include/meta/: motorParam.hpp
src/dependencies/rmd_driver/include/protocol/: address_offset.hpp  command_type.hpp  message.hpp  node.hpp  request.hpp  response.hpp  single_motor_message.hpp
src/dependencies/rmd_driver/src/: driver.cpp
src/dependencies/rmd_driver/src/can/: node.cpp  utilities.cpp
src/dependencies/rmd_driver/src/protocol/: reque.java
src/math/: CMakeLists.txt  Solver.hpp  armDynamcisSolver.cpp  armDynamcisSolver.hpp  armKinematicsSolver.cpp  armKinematicsSolver.hpp  inverse_dynamics_ref.cpp  jacobian.cpp  rigidBody.hpp  transform.hpp  transfrom.cpp
src/motor_interface/include/: motor.hpp  motor_config.hpp  motor_driver.hpp  motor_interface.hpp
src/motor_interface/src/: motor_interface.cpp
src/robot/: CMakeLists.txt
src/robot/include/: fsm.hpp  robot_body.hpp  robot_builder.hpp
src/robot/include/controller/: dynamics_control.hpp  gravity_comp.hpp  impedance_control.hpp  pd_position_control.hpp
src/robot/matlab/: Adjoint.m  TransToRp.m  VecToso3.m  jacobian.m  main.asv  main.m  rotateZ.m
src/robot/src/: dummy.cpp  robot_body.cpp  robot_builder.cpp
src/run/: CMakeLists.txt
src/run/src/: dynamixel_run.cpp  motor_integrate_run.cpp  motor_run.cpp  rmd_run.cpp  simple_pd_control_run.cpp  vr_interface_run.cpp
src/test/: CMakeLists.txt
src/test/src/: dynamixel_test.cpp  motor_test.cpp  rmd_test.cpp  shm_test1.cpp  shm_test2.cpp  shm_test3.cpp  zmq_test1.cpp  zmq_test2.cpp
src/utilities/: CMakeLists.txt
src/utilities/include/: address.hpp  debug.hpp  param.hpp  parser.hpp  parser_yaml.hpp  shm.hpp  timer.hpp
src/vr_interface/: CMakeLists.txt  ControllerListener.cpp  ControllerListener.hpp  troubleshoot(deprecated).txt  vr_interface.cpp
